# libkinect_aux

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makefile.Mac  README  config.mk  kinect_aux.c  kinect_aux.cpp  kinect_aux.h  kinect_aux_lib.h  main.c  test.c
src/: kinect_aux.c  kinect_aux.h  test.c
